# walkie-agent

./: .env.example  .gitignore  README.md  agent_con.py  db_mock_data.py  db_test.py  main copy.py  main.py  pyproject.toml  restaurant_task.py  task_restaurant.py  task_restaurant_please.py  test_background_vision.py  test_cam.py  test_cam_local.py  test_pose.py  test_screen.py  test_vllm.py
src/agents/: __init__.py  common.py  robot_state.py
src/agents/actuators_agent/: __init__.py  agent.py  prompts.py  tools.py
src/agents/middleware/: __init__.py  background_vision.py  robot_state.py  todo.py
src/agents/vision_agent/: __init__.py  agent.py  prompts.py  tools.py
src/agents/walkie_agent/: agent.py  prompts.py  tools.py
src/audio/: __init__.py  speaker.py  walkie.py
src/audio/stt/: stt.py
src/audio/stt/providers/: google.py  whisper.py
src/audio/tts/providers/: __init__.py
src/audio/wakeword/: __init__.py  base.py  keyword.py
src/db/: walkie_db.py
src/screen/: __init__.py  renderer.py  walkie.py
src/utils/: teleop_handler.py
src/vision/: __init__.py  background_detector.py  background_monitor.py  camera.py  localization.py  walkie.py
src/vision/embedding/: base.py  embedding.py
src/vision/embedding/providers/: clip.py
src/vision/image_caption/: base.py  image_caption.py
src/vision/image_caption/providers/: __init__.py  (+2 more)
src/vision/object_detection/: base.py  object_detection.py
tests/: task_human_follow.py  task_restaurant.py  test_cam.py  test_db.py  test_follow_person.py  test_llm_benchmark.py  test_pose_estimation.py  test_vllm.py
(+4 files in other folders)
