[project]
name = "walkie-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "deepagents>=0.3.9",
    "elevenlabs>=2.33.1",
    "faster-whisper>=1.0.0",
    "google-cloud-speech>=2.36.0",
    "langchain-openai>=1.1.7",
    "numpy>=1.24.0",
    "pillow>=12.1.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.28.0",
    "scipy>=1.17.0",
    "segment-anything>=1.0",
    "silero-vad>=6.2.0",
    "sounddevice>=0.5.5",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.30.0",
    "ultralytics>=8.0.0",
    "walkie-sdk",
]

[tool.uv.sources]
walkie-sdk = { git = "https://github.com/EIC-Robocup-2026/walkie-sdk.git" }
